updated execute class

--- a/.classpath
+++ b/.classpath
@@ -24,5 +24,15 @@
 	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="src/main/java/resources/selenium-server-standalone-3.141.59.jar"/>
 	<classpathentry exported="true" kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/Jyoti Singh/.m2/repository/org/testng/testng/6.14.3/testng-6.14.3.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="org.testng"/>
+			<attribute name="maven.artifactId" value="testng"/>
+			<attribute name="maven.version" value="6.14.3"/>
+			<attribute name="maven.scope" value="test"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="G:/eclipse/plugins/org.testng_6.14.2.r201802161450.jar" sourcepath="G:/eclipse/plugins/org.testng.source_6.14.2.r201802161450.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
